【Updated】增加车机网络日志导出功能

--- a/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
@@ -227,25 +227,25 @@
 
 	var tableId = "TCsMachine";
 	var clms = [{checkbox: true}
-	  		,{field: "csmId", title: "编号", width: 110, sort:true}
-	  		,{field: "csmNumber", title: "车机号", width: 110, sort:true}
-	  		,{field: "csmTeNo", title: "序列号", width: 160, sort:true}
-	  		,{field: "csmTeModel", title: "终端型号", width: 110, sort:true}
-	  		,{field: "csmMobile", title: "SIM卡", width: 140, sort:true}
-	  		,{field: "csmIccid", title: "ICCID", width: 200, sort:true}
-	  		,{field: "csmProtocolText", title: "协议类型", width: 110, sort:true}
-	  		,{field: "csmBluetoothVersion", title: "蓝牙版本", width: 110, sort:true}
-	  		,{field: "csmBluetoothMac", title: "蓝牙地址", width: 110, sort:true}
-	  		,{field: "csmBluetoothPsd", title: "蓝牙密码", width: 110, sort:true}
-	  		,{field: "csmV2", title: "硬件版本", width: 110, sort:true}
-	  		,{field: "csmSuitText", title: "适配车型", width: 110, sort:true}
-	  		,{field: "csmTlV1", title: "软件版本", width: 110, sort:true}
-	  		,{field: "csmTlV2", title: "分时租赁版本", width: 110, sort:true}
-	  		,{field: "csmProTypeText", title: "终端协议", width: 110, sort:true}
-	  		,{field: "csmBaudRate", title: "CAN1波特率", width: 110, sort:true}
-	  		,{field: "csmUpdateTime", title: "修改时间", width: 160, sort:true}
-	  		,{field: "csmAddTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "csmStatusText", title: "状态", width: 80, sort:true}
+	  		,{field: "csmId", title: "编号", width: 110, sort:false}
+	  		,{field: "csmNumber", title: "车机号", width: 110, sort:false}
+	  		,{field: "csmTeNo", title: "序列号", width: 160, sort:false}
+	  		,{field: "csmTeModel", title: "终端型号", width: 110, sort:false}
+	  		,{field: "csmMobile", title: "SIM卡", width: 140, sort:false}
+	  		,{field: "csmIccid", title: "ICCID", width: 200, sort:false}
+	  		,{field: "csmProtocolText", title: "协议类型", width: 110, sort:false}
+	  		,{field: "csmBluetoothVersion", title: "蓝牙版本", width: 110, sort:false}
+	  		,{field: "csmBluetoothMac", title: "蓝牙地址", width: 110, sort:false}
+	  		,{field: "csmBluetoothPsd", title: "蓝牙密码", width: 110, sort:false}
+	  		,{field: "csmV2", title: "硬件版本", width: 110, sort:false}
+	  		,{field: "csmSuitText", title: "适配车型", width: 110, sort:false}
+	  		,{field: "csmTlV1", title: "软件版本", width: 110, sort:false}
+	  		,{field: "csmTlV2", title: "分时租赁版本", width: 110, sort:false}
+	  		,{field: "csmProTypeText", title: "终端协议", width: 110, sort:false}
+	  		,{field: "csmBaudRate", title: "CAN1波特率", width: 110, sort:false}
+	  		,{field: "csmUpdateTime", title: "修改时间", width: 160, sort:false}
+	  		,{field: "csmAddTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "csmStatusText", title: "状态", width: 80, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
