--- a/vc-web/vc-web-front/src/main/resources/public/admin/model/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/model/index_list2.html
@@ -156,17 +156,17 @@
 
 	var tableId = "TCsModel";
 	var clms = [{checkbox: true}
-	  		,{field: "csmId", title: "编号", width: 110, sort:true}
-	  		,{field: "csmName", title: "车型名称", width: 160, sort:true}
-	  		,{field: "csmFlag", title: "车型标识", width: 160, sort:true}
-	  		,{field: "csmTypeText", title: "动力类型", width: 110, sort:true}
-	  		,{field: "csmFileText", title: "变速箱类型", width: 110, sort:true}
-	  		,{field: "csmCatagoryText", title: "车辆种类", width: 110, sort:true}
-	  		,{field: "csmTankCapacity", title: "油箱容量(L)", width: 110, sort:true}
-	  		,{field: "csmBatteryCapacity", title: "电池容量(KW.H)", width: 110, sort:true}
-	  		,{field: "csmStatusText", title: "状态", width: 80, sort:true}
-	  		,{field: "csmAddTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "csmUpdateTime", title: "修改时间", width: 160, sort:true}
+	  		,{field: "csmId", title: "编号", width: 110, sort:false}
+	  		,{field: "csmName", title: "车型名称", width: 160, sort:false}
+	  		,{field: "csmFlag", title: "车型标识", width: 160, sort:false}
+	  		,{field: "csmTypeText", title: "动力类型", width: 110, sort:false}
+	  		,{field: "csmFileText", title: "变速箱类型", width: 110, sort:false}
+	  		,{field: "csmCatagoryText", title: "车辆种类", width: 110, sort:false}
+	  		,{field: "csmTankCapacity", title: "油箱容量(L)", width: 110, sort:false}
+	  		,{field: "csmBatteryCapacity", title: "电池容量(KW.H)", width: 110, sort:false}
+	  		,{field: "csmStatusText", title: "状态", width: 80, sort:false}
+	  		,{field: "csmAddTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "csmUpdateTime", title: "修改时间", width: 160, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
