--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
@@ -285,24 +285,24 @@
 
 	var tableId = "TCsVehicle";
 	var clms = [{checkbox: true}
-	  		,{field: "csvId", title: "编号", width: 110, sort:true}
-	  		,{field: "csvCarNo", title: "车牌号", width: 110, sort:true}
-	  		,{field: "csvVin", title: "车架号", width: 180, sort:true}
-	  		,{field: "csvEngineNo", title: "发动机(电机)编号", width: 160, sort:true}
-	  		,{field: "csvCertific", title: "合格证号", width: 110, sort:true}
-	  		,{field: "csvModelText", title: "车型", width: 140, sort:true}
-	  		,{field: "csvMachineText", title: "车机设备", width: 200, sort:true}
-	  		,{field: "csvColorCodeText", title: "车身颜色", width: 110, sort:true}
-	  		,{field: "csvBataccuCode", title: "可充电储能系统编码", width: 110, sort:true}
-	  		,{field: "csvProdDate", title: "出厂日期", width: 110, sort:true}
-	  		,{field: "csvLandmarkText", title: "地标类型", width: 110, sort:true}
-	  		,{field: "csvDomainText", title: "车辆领域", width: 110, sort:true}
-	  		,{field: "csvModelCodeFull", title: "车型代码", width: 220, sort:true}
-	  		,{field: "csvModelCodeSimple", title: "车型备案号", width: 140, sort:true}
-	  		,{field: "csvInteriorColorCode", title: "内饰颜色", width: 110, sort:true}
-	  		,{field: "csvStatusText", title: "状态", width: 80, sort:true}
-	  		,{field: "csvAddTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "csvUpdateTime", title: "修改时间", width: 160, sort:true}
+	  		,{field: "csvId", title: "编号", width: 110, sort:false}
+	  		,{field: "csvCarNo", title: "车牌号", width: 110, sort:false}
+	  		,{field: "csvVin", title: "车架号", width: 180, sort:false}
+	  		,{field: "csvEngineNo", title: "发动机(电机)编号", width: 160, sort:false}
+	  		,{field: "csvCertific", title: "合格证号", width: 110, sort:false}
+	  		,{field: "csvModelText", title: "车型", width: 140, sort:false}
+	  		,{field: "csvMachineText", title: "车机设备", width: 200, sort:false}
+	  		,{field: "csvColorCodeText", title: "车身颜色", width: 110, sort:false}
+	  		,{field: "csvBataccuCode", title: "可充电储能系统编码", width: 110, sort:false}
+	  		,{field: "csvProdDate", title: "出厂日期", width: 110, sort:false}
+	  		,{field: "csvLandmarkText", title: "地标类型", width: 110, sort:false}
+	  		,{field: "csvDomainText", title: "车辆领域", width: 110, sort:false}
+	  		,{field: "csvModelCodeFull", title: "车型代码", width: 220, sort:false}
+	  		,{field: "csvModelCodeSimple", title: "车型备案号", width: 140, sort:false}
+	  		,{field: "csvInteriorColorCode", title: "内饰颜色", width: 110, sort:false}
+	  		,{field: "csvStatusText", title: "状态", width: 80, sort:false}
+	  		,{field: "csvAddTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "csvUpdateTime", title: "修改时间", width: 160, sort:false}
       		,{field: 'operate', title: '操作',width:60, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
