--- a/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/modelMapping/index_list2.html
@@ -148,12 +148,12 @@
 
 	var tableId = "TCsModelMapping";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "编号", width: 110, sort:true}
-	  		,{field: "userIdText", title: "主机厂用户", width: 200, sort:true}
-	  		,{field: "modelIdText", title: "车型", width: 200, sort:true}
-	  		,{field: "remark", title: "备注", width: 160, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "updateTime", title: "更新时间", width: 160, sort:true}
+	  		,{field: "id", title: "编号", width: 110, sort:false}
+	  		,{field: "userIdText", title: "主机厂用户", width: 200, sort:false}
+	  		,{field: "modelIdText", title: "车型", width: 200, sort:false}
+	  		,{field: "remark", title: "备注", width: 160, sort:false}
+	  		,{field: "addTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "updateTime", title: "更新时间", width: 160, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
