--- a/vc-web/vc-web-front/src/main/resources/public/base/access/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/base/access/index_list2.html
@@ -156,17 +156,17 @@
 
 	var tableId = "TSrvHost";
 	var clms = [{checkbox: true}
-	  		,{field: "shId", title: "编号", width: 110, sort:true}
-	  		,{field: "shName", title: "接入商", width: 160, sort:true}
-	  		,{field: "shKey", title: "接入KEY", width: 160, sort:true}
-	  		,{field: "shTopic", title: "转发Topic", width: 140, sort:true}
-	  		,{field: "shTransformRemoteText", title: "转发指令结果", width: 160, sort:true}
-	  		,{field: "shTransformStatusText", title: "转发状态", width: 160, sort:true}
-	  		,{field: "shTransformCanText", title: "转发CAN", width: 160, sort:true}
-	  		,{field: "shAddTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "shUptTime", title: "更新时间", width: 160, sort:true}
-	  		,{field: "shStatusText", title: "状态", width: 80, sort:true}
-	  		,{field: "shAppid", title: "接入ID", width: 160, sort:true}
+	  		,{field: "shId", title: "编号", width: 110, sort:false}
+	  		,{field: "shName", title: "接入商", width: 160, sort:false}
+	  		,{field: "shKey", title: "接入KEY", width: 160, sort:false}
+	  		,{field: "shTopic", title: "转发Topic", width: 140, sort:false}
+	  		,{field: "shTransformRemoteText", title: "转发指令结果", width: 160, sort:false}
+	  		,{field: "shTransformStatusText", title: "转发状态", width: 160, sort:false}
+	  		,{field: "shTransformCanText", title: "转发CAN", width: 160, sort:false}
+	  		,{field: "shAddTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "shUptTime", title: "更新时间", width: 160, sort:false}
+	  		,{field: "shStatusText", title: "状态", width: 80, sort:false}
+	  		,{field: "shAppid", title: "接入ID", width: 160, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
