--- a/vc-web/vc-web-front/src/main/resources/public/base/dict/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/base/dict/index_list2.html
@@ -157,18 +157,18 @@
 
 	var tableId = "TSrvDict";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "编号", width: 110, sort:true}
-	  		,{field: "value", title: "数据值", width: 110, sort:true}
-	  		,{field: "label", title: "标签名", width: 140, sort:true}
-	  		,{field: "type", title: "类型", width: 160, sort:true}
-	  		,{field: "description", title: "描述", width: 160, sort:true}
-	  		,{field: "sort", title: "排序", width: 110, sort:true}
-	  		,{field: "createBy", title: "创建者", width: 110, sort:true}
-	  		,{field: "createDate", title: "创建时间", width: 160, sort:true}
-	  		,{field: "updateBy", title: "更新者", width: 110, sort:true}
-	  		,{field: "updateDate", title: "更新时间", width: 160, sort:true}
-	  		,{field: "remarks", title: "备注信息", width: 110, sort:true}
-	  		,{field: "delFlagText", title: "删除标记", width: 110, sort:true}
+	  		,{field: "id", title: "编号", width: 110, sort:false}
+	  		,{field: "value", title: "数据值", width: 110, sort:false}
+	  		,{field: "label", title: "标签名", width: 140, sort:false}
+	  		,{field: "type", title: "类型", width: 160, sort:false}
+	  		,{field: "description", title: "描述", width: 160, sort:false}
+	  		,{field: "sort", title: "排序", width: 110, sort:false}
+	  		,{field: "createBy", title: "创建者", width: 110, sort:false}
+	  		,{field: "createDate", title: "创建时间", width: 160, sort:false}
+	  		,{field: "updateBy", title: "更新者", width: 110, sort:false}
+	  		,{field: "updateDate", title: "更新时间", width: 160, sort:false}
+	  		,{field: "remarks", title: "备注信息", width: 110, sort:false}
+	  		,{field: "delFlagText", title: "删除标记", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
