--- a/vc-web/vc-web-front/src/main/resources/public/control/struct/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/control/struct/index_list2.html
@@ -153,14 +153,14 @@
 
 	var tableId = "TCsStruct";
 	var clms = [{checkbox: true}
-	  		,{field: "cssId", title: "编号", width: 110, sort:true}
-	  		,{field: "cssName", title: "指令名称", width: 200, sort:true}
-	  		,{field: "cssTypeText", title: "命令类型", width: 110, sort:true}
-	  		,{field: "cssReqCode", title: "请求示例", width: 110, sort:true}
-	  		,{field: "cssRequest", title: "请求结构", width: 400, sort:true}
-	  		,{field: "cssRepCode", title: "响应示例", width: 110, sort:true}
-	  		,{field: "cssResponse", title: "响应结构", width: 110, sort:true}
-	  		,{field: "cssStatusText", title: "状态", width: 110, sort:true}
+	  		,{field: "cssId", title: "编号", width: 110, sort:false}
+	  		,{field: "cssName", title: "指令名称", width: 200, sort:false}
+	  		,{field: "cssTypeText", title: "命令类型", width: 110, sort:false}
+	  		,{field: "cssReqCode", title: "请求示例", width: 110, sort:false}
+	  		,{field: "cssRequest", title: "请求结构", width: 400, sort:false}
+	  		,{field: "cssRepCode", title: "响应示例", width: 110, sort:false}
+	  		,{field: "cssResponse", title: "响应结构", width: 110, sort:false}
+	  		,{field: "cssStatusText", title: "状态", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
