--- a/vc-web/vc-web-front/src/main/resources/public/electricity/alarm/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/alarm/index_list2.html
@@ -202,7 +202,7 @@
     var tableId = "TEvAlarmRecord";
     var clms = [{checkbox: true}
         , {field: "id", title: "编号", width: 110, sort: true}
-        /*,{field: "uuid", title: "uuid", width: 110, sort:true}*/
+        /*,{field: "uuid", title: "uuid", width: 110, sort:false}*/
         , {field: "vin", title: "vin码", width: 170, sort: true}
         , {field: "alarmTypeText", title: "报警类型", width: 170, sort: true}
         /*, {field: "alarmTypeValueText", title: "报警类型标志位值", width: 110, sort: true}*/
