--- a/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/gbState/index_list2.html
@@ -180,24 +180,24 @@
 
 	var tableId = "TGbState";
 	var clms = [{checkbox: true}
-	  		,{field: "vin", title: "VIN", width: 110, sort:true}
-	  		,{field: "timeString", title: "报文时间", width: 110, sort:true}
-	  		,{field: "vehicleStatusString", title: "车辆状态", width: 110, sort:true}
-	  		,{field: "chargingString", title: "充电状态", width: 110, sort:true}
-	  		,{field: "runningModeString", title: "运行模式", width: 110, sort:true}
-	  		,{field: "speedString", title: "车速", width: 110, sort:true}
-	  		,{field: "mileageString", title: "累计里程", width: 110, sort:true}
-	  		,{field: "voltageString", title: "总电压", width: 110, sort:true}
-	  		,{field: "currentString", title: "总电流", width: 110, sort:true}
-	  		,{field: "socString", title: "SOC", width: 110, sort:true}
-	  		,{field: "dcDcStatusString", title: "DC-DC状态", width: 110, sort:true}
-	  		,{field: "gearString", title: "挡位", width: 110, sort:true}
-	  		,{field: "insulationResistanceString", title: "绝缘电阻", width: 110, sort:true}
-	  		,{field: "acceleratedPedalStrokeValueString", title: "加速踏板行程值", width: 110, sort:true}
-	  		,{field: "brakePedalStateString", title: "制动踏板状态", width: 110, sort:true}
-	  		,{field: "positionStatusString", title: "定位状态", width: 110, sort:true}
-	  		,{field: "longitudeString", title: "经度", width: 110, sort:true}
-	  		,{field: "latitudeString", title: "纬度", width: 110, sort:true}
+	  		,{field: "vin", title: "VIN", width: 110, sort:false}
+	  		,{field: "timeString", title: "报文时间", width: 110, sort:false}
+	  		,{field: "vehicleStatusString", title: "车辆状态", width: 110, sort:false}
+	  		,{field: "chargingString", title: "充电状态", width: 110, sort:false}
+	  		,{field: "runningModeString", title: "运行模式", width: 110, sort:false}
+	  		,{field: "speedString", title: "车速", width: 110, sort:false}
+	  		,{field: "mileageString", title: "累计里程", width: 110, sort:false}
+	  		,{field: "voltageString", title: "总电压", width: 110, sort:false}
+	  		,{field: "currentString", title: "总电流", width: 110, sort:false}
+	  		,{field: "socString", title: "SOC", width: 110, sort:false}
+	  		,{field: "dcDcStatusString", title: "DC-DC状态", width: 110, sort:false}
+	  		,{field: "gearString", title: "挡位", width: 110, sort:false}
+	  		,{field: "insulationResistanceString", title: "绝缘电阻", width: 110, sort:false}
+	  		,{field: "acceleratedPedalStrokeValueString", title: "加速踏板行程值", width: 110, sort:false}
+	  		,{field: "brakePedalStateString", title: "制动踏板状态", width: 110, sort:false}
+	  		,{field: "positionStatusString", title: "定位状态", width: 110, sort:false}
+	  		,{field: "longitudeString", title: "经度", width: 110, sort:false}
+	  		,{field: "latitudeString", title: "纬度", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
