--- a/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/electricity/historyState/index_list2.html
@@ -165,14 +165,14 @@
 
 	var tableId = "THistoryGb";
 	var clms = [{checkbox: true}
-	  		,{field: "csVin", title: "车辆vin码", width: 180, sort:true}
-	  		,{field: "csAccessText", title: "授权系统", width: 160, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "currentTime", title: "报文上传时间", width: 160, sort:true}
-	  		,{field: "csProtocolText", title: "协议类型", width: 110, sort:true}
-	  		,{field: "gbData", title: "报文内容", width: 200, sort:true}
-	  		,{field: "gbTypeText", title: "报文类型", width: 110, sort:true}
-	  		,{field: "csVerifyText", title: "校验结果", width: 110, sort:true}
+	  		,{field: "csVin", title: "车辆vin码", width: 180, sort:false}
+	  		,{field: "csAccessText", title: "授权系统", width: 160, sort:false}
+	  		,{field: "addTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "currentTime", title: "报文上传时间", width: 160, sort:false}
+	  		,{field: "csProtocolText", title: "协议类型", width: 110, sort:false}
+	  		,{field: "gbData", title: "报文内容", width: 200, sort:false}
+	  		,{field: "gbTypeText", title: "报文类型", width: 110, sort:false}
+	  		,{field: "csVerifyText", title: "校验结果", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
