--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
@@ -193,7 +193,7 @@
   var tableId = "TCsIndexReport";
   var clms = [
     {checkbox: true}
-    /*,{field: "id", title: "编号", width: 110, sort:true}*/
+    /*,{field: "id", title: "编号", width: 110, sort:false}*/
     , {field: "csVinText", title: "车辆VIN码", width: 180, sort: true}
     , {field: "csNumberText", title: "车机号", width: 160, sort: true}
     , {field: "monthlyAvgMile", title: "月均行驶里程(KM)", width: 110, sort: true}
@@ -205,7 +205,7 @@
     , {field: "cumulativeMileage", title: "累计行驶里程", width: 110, sort: true}
     , {field: "cumulativeCharge", title: "累计充电量", width: 110, sort: true}
     , {field: "dataTypeText", title: "数据类型", width: 110, sort: true}
-    /*,{field: "createTime", title: "此行创建时间", width: 110, sort:true}*/
+    /*,{field: "createTime", title: "此行创建时间", width: 110, sort:false}*/
     , {field: "modifyDate", title: "此行更新时间", width: 160, sort: true}
     , {field: "facTime", title: "车辆出厂日期", width: 110, sort: true}
     /*,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}*/
