--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyRemote/index_list2.html
@@ -6,7 +6,7 @@
         </button>
 
         <div class="btn-group" title="列">
-            <div class="btn-group">
+            <!--<div class="btn-group">
                 <button data-toggle="dropdown" class="btn btn-default dropdown-toggle btn-outline gridMoreOper"
                         aria-expanded="false">
                     <i class="glyphicon fa fa-cogs"></i>
@@ -19,7 +19,7 @@
                         <a href="javascript:operate.exportData();">数据导出</a>
                     </li>
                 </ul>
-            </div>
+            </div>-->
             <div class="btn-group">
                 <button type="button" class="btn btn-default btn-outline dropdown-toggle" data-toggle="dropdown"
                         aria-expanded="false">
@@ -143,26 +143,26 @@
 
     var tableId = "TCsRemote";
     var clms = [{checkbox: true}
-        , {field: "csrId", title: "编号", width: 110, sort: true}
-        , {field: "csrAccessText", title: "授权系统", width: 110, sort: true}
-        , {field: "csrHost", title: "子域", width: 110, sort: true}
-        , {field: "csrNumberText", title: "车机号", width: 110, sort: true}
-        , {field: "csrCarText", title: "关联车辆", width: 110, sort: true}
-        , {field: "csrWayText", title: "发送方式", width: 110, sort: true}
-        , {field: "csrTypeText", title: "指令类型", width: 110, sort: true}
-        , {field: "csrCode", title: "控制串码", width: 110, sort: true}
-        , {field: "csrResultCode", title: "返回串码", width: 110, sort: true}
-        , {field: "csrResult", title: "返回结果", width: 110, sort: true}
-        , {field: "csrEditor", title: "操作人", width: 110, sort: true}
+        , {field: "csrId", title: "编号", width: 110, sort: false}
+        , {field: "csrAccessText", title: "授权系统", width: 110, sort: false}
+        , {field: "csrHost", title: "子域", width: 110, sort: false}
+        , {field: "csrNumberText", title: "车机号", width: 110, sort: false}
+        , {field: "csrCarText", title: "关联车辆", width: 110, sort: false}
+        , {field: "csrWayText", title: "发送方式", width: 110, sort: false}
+        , {field: "csrTypeText", title: "指令类型", width: 110, sort: false}
+        , {field: "csrCode", title: "控制串码", width: 110, sort: false}
+        , {field: "csrResultCode", title: "返回串码", width: 110, sort: false}
+        , {field: "csrResult", title: "返回结果", width: 110, sort: false}
+        , {field: "csrEditor", title: "操作人", width: 110, sort: false}
         , {
-            field: "csrUpdateTime", title: "成功时间", width: 110, sort: true, templet: '#tlCsrUpdateTime'
+            field: "csrUpdateTime", title: "成功时间", width: 110, sort: false, templet: '#tlCsrUpdateTime'
         }
         , {
-            field: "csrAddTime", title: "添加时间", width: 110, sort: true, templet: '#tlCsrAddTime'
+            field: "csrAddTime", title: "添加时间", width: 110, sort: false, templet: '#tlCsrAddTime'
         }
-        , {field: "csrStateText", title: "发送状态", width: 110, sort: true}
-        , {field: "csrStatusText", title: "操作结果", width: 110, sort: true}
-        , {field: "csrRemark", title: "备注", width: 110, sort: true}
+        , {field: "csrStateText", title: "发送状态", width: 110, sort: false}
+        , {field: "csrStatusText", title: "操作结果", width: 110, sort: false}
+        , {field: "csrRemark", title: "备注", width: 110, sort: false}
         //,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
