--- a/vc-web/vc-web-front/src/main/resources/public/monitor/register/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/register/index_list2.html
@@ -100,18 +100,18 @@
 
 	var tableId = "TCsTerminal";
 	var clms = [{checkbox: true}
-	  		,{field: "cstId", title: "编号", width: 110, sort:true}
-	  		,{field: "cstIdd", title: "序列号", width: 140, sort:true}
-	  		,{field: "cstModel", title: "型号", width: 120, sort:true}
-	  		,{field: "cstMade", title: "制造商", width: 110, sort:true}
-	  		,{field: "cstProvince", title: "省域", width: 110, sort:true}
-	  		,{field: "cstCity", title: "市县域", width: 110, sort:true}
-	  		,{field: "cstColor", title: "车牌颜色", width: 110, sort:true}
-	  		,{field: "cstNumber", title: "车辆标识", width: 110, sort:true}
-	  		,{field: "cstMobile", title: "SIM", width: 180, sort:true}
-	  		,{field: "cstUpdateTime", title: "更新时间", width: 160, sort:true}
-	  		,{field: "cstAddTime", title: "添加时间", width: 160, sort:true}
-	  		,{field: "cstStatusText", title: "状态", width: 110, sort:true}
+	  		,{field: "cstId", title: "编号", width: 110, sort:false}
+	  		,{field: "cstIdd", title: "序列号", width: 140, sort:false}
+	  		,{field: "cstModel", title: "型号", width: 120, sort:false}
+	  		,{field: "cstMade", title: "制造商", width: 110, sort:false}
+	  		,{field: "cstProvince", title: "省域", width: 110, sort:false}
+	  		,{field: "cstCity", title: "市县域", width: 110, sort:false}
+	  		,{field: "cstColor", title: "车牌颜色", width: 110, sort:false}
+	  		,{field: "cstNumber", title: "车辆标识", width: 110, sort:false}
+	  		,{field: "cstMobile", title: "SIM", width: 180, sort:false}
+	  		,{field: "cstUpdateTime", title: "更新时间", width: 160, sort:false}
+	  		,{field: "cstAddTime", title: "添加时间", width: 160, sort:false}
+	  		,{field: "cstStatusText", title: "状态", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
