--- a/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/stateLimited/index_list2.html
@@ -210,45 +210,45 @@
 
 	var tableId = "TCsState";
 	var clms = [{checkbox: true}
-	  		,{field: "cssId", title: "编号", width: 110, sort:true}
-	  		,{field: "cssAccessText", title: "接入商", width: 110, sort:true}
-	  		,{field: "cssNumberText", title: "车机号", width: 110, sort:true}
-	  		,{field: "cssCarText", title: "车辆", width: 110, sort:true}
-	  		,{field: "cssAddTime", title: "接收时间", width: 110, sort:true}
-	  		,{field: "cssCurrentTime", title: "报文时间", width: 110, sort:true}
-	  		,{field: "cssWarn", title: "报警码", width: 110, sort:true}
-	  		,{field: "cssObdMile", title: "累计里程", width: 110, sort:true}
-	  		,{field: "cssEngineT", title: "发动机温度", width: 110, sort:true}
-	  		,{field: "cssSpeed", title: "车速", width: 110, sort:true}
-	  		,{field: "cssMotor", title: "转速", width: 110, sort:true}
-	  		,{field: "cssOil", title: "燃油量", width: 110, sort:true}
-	  		,{field: "cssPower", title: "小电瓶电量", width: 110, sort:true}
-	  		,{field: "cssEvBattery", title: "SOC", width: 110, sort:true}
-	  		,{field: "cssChargingText", title: "充电状态", width: 110, sort:true}
-	  		,{field: "cssEndurance", title: "续航里程", width: 110, sort:true}
-	  		,{field: "cssTemperature", title: "温度", width: 110, sort:true}
-	  		,{field: "cssCsq", title: "CSQ", width: 110, sort:true}
-	  		,{field: "cssLongitude", title: "经度", width: 110, sort:true}
-	  		,{field: "cssLatitude", title: "纬度", width: 110, sort:true}
-	  		,{field: "cssGpsValidText", title: "GPS有效性", width: 110, sort:true}
-	  		,{field: "cssGpsCn", title: "GPS强度", width: 110, sort:true}
-	  		,{field: "cssGpsCount", title: "GPS卫星数", width: 110, sort:true}
-	  		,{field: "cssDir", title: "方向角", width: 110, sort:true}
-	  		,{field: "cssSavingText", title: "功耗模式", width: 110, sort:true}
-	  		,{field: "cssDoor", title: "车门状态", width: 110, sort:true}
-	  		,{field: "cssEngineText", title: "发动机状态", width: 110, sort:true}
-	  		,{field: "cssKey", title: "钥匙状态", width: 110, sort:true}
-	  		,{field: "cssGearText", title: "档位", width: 110, sort:true}
-	  		,{field: "cssLight", title: "车灯状态", width: 110, sort:true}
-	  		,{field: "cssLock", title: "车锁状态", width: 110, sort:true}
-	  		,{field: "cssNetTypeText", title: "网络类型", width: 110, sort:true}
-	  		,{field: "cssBaseLac", title: "LAC", width: 110, sort:true}
-	  		,{field: "cssBaseCi", title: "CI", width: 110, sort:true}
-	  		,{field: "cssOrder", title: "订单号", width: 110, sort:true}
-	  		,{field: "cssMoData", title: "报文数据", width: 110, sort:true}
-	  		,{field: "cssTeNo", title: "终端信息", width: 110, sort:true}
-	  		,{field: "cssAutopilot", title: "自动驾驶状态", width: 110, sort:true}
-	  		,{field: "cssHandbrakeText", title: "手刹状态", width: 110, sort:true}
+	  		,{field: "cssId", title: "编号", width: 110, sort:false}
+	  		,{field: "cssAccessText", title: "接入商", width: 110, sort:false}
+	  		,{field: "cssNumberText", title: "车机号", width: 110, sort:false}
+	  		,{field: "cssCarText", title: "车辆", width: 110, sort:false}
+	  		,{field: "cssAddTime", title: "接收时间", width: 110, sort:false}
+	  		,{field: "cssCurrentTime", title: "报文时间", width: 110, sort:false}
+	  		,{field: "cssWarn", title: "报警码", width: 110, sort:false}
+	  		,{field: "cssObdMile", title: "累计里程", width: 110, sort:false}
+	  		,{field: "cssEngineT", title: "发动机温度", width: 110, sort:false}
+	  		,{field: "cssSpeed", title: "车速", width: 110, sort:false}
+	  		,{field: "cssMotor", title: "转速", width: 110, sort:false}
+	  		,{field: "cssOil", title: "燃油量", width: 110, sort:false}
+	  		,{field: "cssPower", title: "小电瓶电量", width: 110, sort:false}
+	  		,{field: "cssEvBattery", title: "SOC", width: 110, sort:false}
+	  		,{field: "cssChargingText", title: "充电状态", width: 110, sort:false}
+	  		,{field: "cssEndurance", title: "续航里程", width: 110, sort:false}
+	  		,{field: "cssTemperature", title: "温度", width: 110, sort:false}
+	  		,{field: "cssCsq", title: "CSQ", width: 110, sort:false}
+	  		,{field: "cssLongitude", title: "经度", width: 110, sort:false}
+	  		,{field: "cssLatitude", title: "纬度", width: 110, sort:false}
+	  		,{field: "cssGpsValidText", title: "GPS有效性", width: 110, sort:false}
+	  		,{field: "cssGpsCn", title: "GPS强度", width: 110, sort:false}
+	  		,{field: "cssGpsCount", title: "GPS卫星数", width: 110, sort:false}
+	  		,{field: "cssDir", title: "方向角", width: 110, sort:false}
+	  		,{field: "cssSavingText", title: "功耗模式", width: 110, sort:false}
+	  		,{field: "cssDoor", title: "车门状态", width: 110, sort:false}
+	  		,{field: "cssEngineText", title: "发动机状态", width: 110, sort:false}
+	  		,{field: "cssKey", title: "钥匙状态", width: 110, sort:false}
+	  		,{field: "cssGearText", title: "档位", width: 110, sort:false}
+	  		,{field: "cssLight", title: "车灯状态", width: 110, sort:false}
+	  		,{field: "cssLock", title: "车锁状态", width: 110, sort:false}
+	  		,{field: "cssNetTypeText", title: "网络类型", width: 110, sort:false}
+	  		,{field: "cssBaseLac", title: "LAC", width: 110, sort:false}
+	  		,{field: "cssBaseCi", title: "CI", width: 110, sort:false}
+	  		,{field: "cssOrder", title: "订单号", width: 110, sort:false}
+	  		,{field: "cssMoData", title: "报文数据", width: 110, sort:false}
+	  		,{field: "cssTeNo", title: "终端信息", width: 110, sort:false}
+	  		,{field: "cssAutopilot", title: "自动驾驶状态", width: 110, sort:false}
+	  		,{field: "cssHandbrakeText", title: "手刹状态", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
