--- a/vc-web/vc-web-front/src/main/resources/public/upgrade/manage/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/upgrade/manage/index_list2.html
@@ -197,11 +197,11 @@
 
 	var tableId = "TVerUpManage";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "编号", width: 110, sort:true}
-	  		,{field: "statusUpgradeText", title: "升级状态", width: 110, sort:true}
-	  		,{field: "verCurIdText", title: "当前版本", width: 110, sort:true}
-	  		,{field: "modelIdText", title: "车型", width: 110, sort:true}
-	  		,{field: "vehicleIdText", title: "车辆VIN码", width: 110, sort:true}
+	  		,{field: "id", title: "编号", width: 110, sort:false}
+	  		,{field: "statusUpgradeText", title: "升级状态", width: 110, sort:false}
+	  		,{field: "verCurIdText", title: "当前版本", width: 110, sort:false}
+	  		,{field: "modelIdText", title: "车型", width: 110, sort:false}
+	  		,{field: "vehicleIdText", title: "车辆VIN码", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 156, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
