--- a/vc-web/vc-web-front/src/main/resources/public/version/ftpserver/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/ftpserver/index_list2.html
@@ -116,13 +116,13 @@
 
 	var tableId = "TVerFtpSer";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "服务器编号", width: 110, sort:true}
-	  		,{field: "name", title: "服务器名称", width: 110, sort:true}
-	  		,{field: "serUsername", title: "登陆用户名", width: 110, sort:true}
-	  		,{field: "serPwd", title: "登陆密码", width: 110, sort:true}
-	  		,{field: "url", title: "远程地址", width: 110, sort:true}
-	  		,{field: "port", title: "端口", width: 110, sort:true}
-	  		,{field: "typeText", title: "服务器类型", width: 110, sort:true}
+	  		,{field: "id", title: "服务器编号", width: 110, sort:false}
+	  		,{field: "name", title: "服务器名称", width: 110, sort:false}
+	  		,{field: "serUsername", title: "登陆用户名", width: 110, sort:false}
+	  		,{field: "serPwd", title: "登陆密码", width: 110, sort:false}
+	  		,{field: "url", title: "远程地址", width: 110, sort:false}
+	  		,{field: "port", title: "端口", width: 110, sort:false}
+	  		,{field: "typeText", title: "服务器类型", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
