--- a/vc-web/vc-web-front/src/main/resources/public/version/module/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/module/index_list2.html
@@ -137,15 +137,15 @@
 
 	var tableId = "TVerModule";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "模块编号", width: 110, sort:true}
-	  		,{field: "typeText", title: "模块类型", width: 110, sort:true}
-	  		,{field: "name", title: "模板名称或者数据项", width: 110, sort:true}
-	  		,{field: "des", title: "模块描述", width: 110, sort:true}
-	  		,{field: "version", title: "模块版本", width: 110, sort:true}
-	  		,{field: "dataTypeText", title: "数据类别", width: 110, sort:true}
-	  		,{field: "dataItemTypeText", title: "数据项类别", width: 110, sort:true}
-	  		,{field: "dataValue", title: "数据项值描述", width: 110, sort:true}
-	  		,{field: "sort", title: "排序", width: 110, sort:true}
+	  		,{field: "id", title: "模块编号", width: 110, sort:false}
+	  		,{field: "typeText", title: "模块类型", width: 110, sort:false}
+	  		,{field: "name", title: "模板名称或者数据项", width: 110, sort:false}
+	  		,{field: "des", title: "模块描述", width: 110, sort:false}
+	  		,{field: "version", title: "模块版本", width: 110, sort:false}
+	  		,{field: "dataTypeText", title: "数据类别", width: 110, sort:false}
+	  		,{field: "dataItemTypeText", title: "数据项类别", width: 110, sort:false}
+	  		,{field: "dataValue", title: "数据项值描述", width: 110, sort:false}
+	  		,{field: "sort", title: "排序", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
