--- a/vc-web/vc-web-front/src/main/resources/public/version/softhardware/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/softhardware/index_list2.html
@@ -178,10 +178,10 @@
 
 	var tableId = "TVerSoftHardware";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "版本编号", width: 110, sort:true}
-	  		,{field: "verNo", title: "版本号", width: 110, sort:true}
-	  		,{field: "des", title: "版本描述", width: 110, sort:true}
-	  		,{field: "typeText", title: "版本类型", width: 110, sort:true}
+	  		,{field: "id", title: "版本编号", width: 110, sort:false}
+	  		,{field: "verNo", title: "版本号", width: 110, sort:false}
+	  		,{field: "des", title: "版本描述", width: 110, sort:false}
+	  		,{field: "typeText", title: "版本类型", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 156, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
