--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/index_list2.html
@@ -145,23 +145,23 @@
 
 	var tableId = "TVerUpgrade";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "编号", width: 110, sort:true}
-	  		,{field: "softVerIdText", title: "插件版本号", width: 110, sort:true}
-	  		,{field: "hardVerIdText", title: "硬件版本号", width: 110, sort:true}
-            ,{field: "bluetoothVerIdText", title: "蓝牙版本号", width: 110, sort:true}
-            ,{field: "majorVersionIdText", title: "主版本号", width: 110, sort:true}
-	  		,{field: "modelIdText", title: "车型", width: 110, sort:true}
-	  		,{field: "telTypeText", title: "终端类型", width: 110, sort:true}
-            ,{field: "telModel", title: "终端型号", width: 110, sort:true}
-	  		,{field: "innerVer", title: "生产内部版本号", width: 110, sort:true}
-	  		,{field: "isOpenText", title: "是否对外开放", width: 110, sort:true}
-	  		,{field: "des", title: "描述", width: 110, sort:true}
-	  		,{field: "upVerNo", title: "升级版本号", width: 110, sort:true}
-	  		,{field: "serFtpIdText", title: "文件服务器名称", width: 110, sort:true}
-	  		,{field: "perTimeout", title: "单次升级超时时长（毫秒）", width: 110, sort:true}
-	  		,{field: "perMaxVehicle", title: "单次升级最大车辆数", width: 110, sort:true}
-	  		,{field: "fileName", title: "升级文件名称", width: 110, sort:true}
-	  		,{field: "turnOffFlagText", title: "是否为拐点版本", width: 110, sort:true}
+	  		,{field: "id", title: "编号", width: 110, sort:false}
+	  		,{field: "softVerIdText", title: "插件版本号", width: 110, sort:false}
+	  		,{field: "hardVerIdText", title: "硬件版本号", width: 110, sort:false}
+            ,{field: "bluetoothVerIdText", title: "蓝牙版本号", width: 110, sort:false}
+            ,{field: "majorVersionIdText", title: "主版本号", width: 110, sort:false}
+	  		,{field: "modelIdText", title: "车型", width: 110, sort:false}
+	  		,{field: "telTypeText", title: "终端类型", width: 110, sort:false}
+            ,{field: "telModel", title: "终端型号", width: 110, sort:false}
+	  		,{field: "innerVer", title: "生产内部版本号", width: 110, sort:false}
+	  		,{field: "isOpenText", title: "是否对外开放", width: 110, sort:false}
+	  		,{field: "des", title: "描述", width: 110, sort:false}
+	  		,{field: "upVerNo", title: "升级版本号", width: 110, sort:false}
+	  		,{field: "serFtpIdText", title: "文件服务器名称", width: 110, sort:false}
+	  		,{field: "perTimeout", title: "单次升级超时时长（毫秒）", width: 110, sort:false}
+	  		,{field: "perMaxVehicle", title: "单次升级最大车辆数", width: 110, sort:false}
+	  		,{field: "fileName", title: "升级文件名称", width: 110, sort:false}
+	  		,{field: "turnOffFlagText", title: "是否为拐点版本", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
