--- a/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/version/upgrade/record/index_list2.html
@@ -140,18 +140,18 @@
 
 	var tableId = "TVerUpgradeRecord";
 	var clms = [{checkbox: true}
-	  		,{field: "id", title: "记录编号", width: 110, sort:true}
-	  		,{field: "vin", title: "车架号", width: 110, sort:true}
-	  		,{field: "carModelText", title: "车型", width: 110, sort:true}
-	  		,{field: "teNumber", title: "车机号", width: 110, sort:true}
-	  		,{field: "teTypeText", title: "车机类型", width: 110, sort:true}
-	  		,{field: "teModel", title: "车机型号", width: 110, sort:true}
-	  		,{field: "fromVersionText", title: "当前版本", width: 110, sort:true}
-	  		,{field: "fromTypeText", title: "当前版本数据类型", width: 110, sort:true}
-	  		,{field: "toVersionText", title: "目的版本", width: 110, sort:true}
-	  		,{field: "statusText", title: "状态", width: 110, sort:true}
-	  		,{field: "addTime", title: "添加时间", width: 110, sort:true}
-	  		,{field: "updateTime", title: "更新时间", width: 110, sort:true}
+	  		,{field: "id", title: "记录编号", width: 110, sort:false}
+	  		,{field: "vin", title: "车架号", width: 110, sort:false}
+	  		,{field: "carModelText", title: "车型", width: 110, sort:false}
+	  		,{field: "teNumber", title: "车机号", width: 110, sort:false}
+	  		,{field: "teTypeText", title: "车机类型", width: 110, sort:false}
+	  		,{field: "teModel", title: "车机型号", width: 110, sort:false}
+	  		,{field: "fromVersionText", title: "当前版本", width: 110, sort:false}
+	  		,{field: "fromTypeText", title: "当前版本数据类型", width: 110, sort:false}
+	  		,{field: "toVersionText", title: "目的版本", width: 110, sort:false}
+	  		,{field: "statusText", title: "状态", width: 110, sort:false}
+	  		,{field: "addTime", title: "添加时间", width: 110, sort:false}
+	  		,{field: "updateTime", title: "更新时间", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
