--- a/vc-web/vc-web-front/src/main/resources/public/admin/mapping/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/mapping/index_list2.html
@@ -145,9 +145,9 @@
 
 	var tableId = "TCsMapping";
 	var clms = [{checkbox: true}
-	  		,{field: "csmId", title: "编号", width: 110, sort:true}
-	  		,{field: "csmCar", title: "车辆", width: 110, sort:true}
-	  		,{field: "csmManage", title: "管理员", width: 110, sort:true}
+	  		,{field: "csmId", title: "编号", width: 110, sort:false}
+	  		,{field: "csmCar", title: "车辆", width: 110, sort:false}
+	  		,{field: "csmManage", title: "管理员", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
