--- a/vc-web/vc-web-front/src/main/resources/public/auth/group/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/auth/group/index_list2.html
@@ -135,12 +135,12 @@
 
 	var tableId = "TSrvGroup";
 	var clms = [{checkbox: true}
-	  		,{field: "sgId", title: "编号", width: 110, sort:true}
-	  		,{field: "sgName", title: "角色组名称", width: 160, sort:true}
-	  		,{field: "sgParent", title: "上级组", width: 120, sort:true}
-	  		,{field: "sgUser", title: "负责人", width: 120, sort:true}
-	  		,{field: "sgFlag", title: "组标识", width: 160, sort:true}
-	  		,{field: "sgStatusText", title: "状态", width: 110, sort:true}
+	  		,{field: "sgId", title: "编号", width: 110, sort:false}
+	  		,{field: "sgName", title: "角色组名称", width: 160, sort:false}
+	  		,{field: "sgParent", title: "上级组", width: 120, sort:false}
+	  		,{field: "sgUser", title: "负责人", width: 120, sort:false}
+	  		,{field: "sgFlag", title: "组标识", width: 160, sort:false}
+	  		,{field: "sgStatusText", title: "状态", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
