--- a/vc-web/vc-web-front/src/main/resources/public/monitor/can/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/can/index_list2.html
@@ -99,17 +99,17 @@
 
 	var tableId = "TCsCan";
 	var clms = [{checkbox: true}
-	  		,{field: "cscId", title: "编号", width: 110, sort:true}
-	  		,{field: "cscAccessText", title: "接入商", width: 140, sort:true}
-	  		,{field: "cscNumberText", title: "车机号", width: 140, sort:true}
-	  		,{field: "cscCarText", title: "车辆", width: 180, sort:true}
-	  		,{field: "cscModel", title: "适配车型", width: 160, sort:true}
-	  		,{field: "cscTypeText", title: "CAN类型", width: 110, sort:true}
-	  		,{field: "cscOrder", title: "订单号", width: 110, sort:true}
-	  		,{field: "cscData", title: "报文数据", width: 200, sort:true}
-	  		,{field: "cscUploadTime", title: "报文时间", width: 160, sort:true}
-	  		,{field: "cscAddTime", title: "接收时间", width: 160, sort:true}
-	  		,{field: "cscStatusText", title: "状态", width: 110, sort:true}
+	  		,{field: "cscId", title: "编号", width: 110, sort:false}
+	  		,{field: "cscAccessText", title: "接入商", width: 140, sort:false}
+	  		,{field: "cscNumberText", title: "车机号", width: 140, sort:false}
+	  		,{field: "cscCarText", title: "车辆", width: 180, sort:false}
+	  		,{field: "cscModel", title: "适配车型", width: 160, sort:false}
+	  		,{field: "cscTypeText", title: "CAN类型", width: 110, sort:false}
+	  		,{field: "cscOrder", title: "订单号", width: 110, sort:false}
+	  		,{field: "cscData", title: "报文数据", width: 200, sort:false}
+	  		,{field: "cscUploadTime", title: "报文时间", width: 160, sort:false}
+	  		,{field: "cscAddTime", title: "接收时间", width: 160, sort:false}
+	  		,{field: "cscStatusText", title: "状态", width: 110, sort:false}
       		,{field: 'operate', title: '操作', width: 40, fixed:'right', toolbar: '#gridToolBar'}
     ];
 
