--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
@@ -12,15 +12,15 @@
 					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/search">
 				</dd>
 			</dl>
-<dl cond="currentTime" >
-				<dt>下位机时间</dt>
-				<dd class="timergroup" >
-					<input  name="currentTimeStart"  placeholder="开始日期" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
-                    <label class="timegrouplabel">-</label>
-                    <input  name="currentTimeEnd" placeholder="结束日期" class="form-control timegroupinput" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
+
+			<input name="currentTimeStart" type="hidden">
+			<input name="currentTimeEnd" type="hidden">
+			<dl cond="currentTime">
+				<dt>下位机时间：</dt>
+				<dd class="timergroup">
+					<input type="text" name="datePicker" class="form-control" id="datePicker">
 				</dd>
 			</dl>
-
 			<div class="querybtns">
 				<button class="btn btn-success " type="button" onclick="operate.query();"><i class="glyphicon fa fa-search"></i>查询</button>
 				<button class="btn btn-primary" type="button" resetForm><i class="glyphicon fa fa-reply"></i>清空</button>
@@ -29,6 +29,54 @@
 	</form>
 </body>
 <script type="text/javascript">
+  var startTimestamp = moment().hours(0).minutes(0).seconds(0);
+  var endTimestamp = moment(new Date());
+  var startTime = startTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  var endTime = endTimestamp.format('YYYY-MM-DD HH:mm:ss');
+  $('input[name="currentTimeStart"]').val(startTime);
+  $('input[name="currentTimeEnd"]').val(endTime);
+  $(document).ready(function () {
+    $('input[name="datePicker"]').daterangepicker({
+      autoApply: true,
+      showDropdowns: true,
+      timePicker: true, //显示时间
+      timePicker24Hour: true, //时间制
+      timePickerSeconds: true, //时间显示到秒
+      startDate: startTime, //设置开始日期
+      endDate: endTime, //设置结束器日期
+      //maxDate: endTime, //设置最大日期
+      opens: "center",
+      dateLimit: {
+        "days": 30
+      },
+      ranges: {
+        // '今天': [moment(), moment()],
+        '昨天': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+        '上周': [moment().subtract(6, 'days'), moment()],
+        '前30天': [moment().subtract(29, 'days'), moment()],
+        '本月': [moment().startOf('month'), moment().endOf('month')],
+        '上月': [moment().subtract(1, 'month').startOf('month'),
+          moment().subtract(1, 'month').endOf('month')]
+      },
+      showWeekNumbers: true,
+      locale: {
+        format: "YYYY-MM-DD HH:mm:ss", //设置显示格式
+        applyLabel: '确定', //确定按钮文本
+        cancelLabel: '取消', //取消按钮文本
+        customRangeLabel: '自定义',
+        daysOfWeek: ['日', '一', '二', '三', '四', '五', '六'],
+        monthNames: ['一月', '二月', '三月', '四月', '五月', '六月',
+          '七月', '八月', '九月', '十月', '十一月', '十二月'
+        ],
+        firstDay: 1
+      },
+    }, function (start, end, label) {
+      startTime = start.format('YYYY-MM-DD HH:mm:ss');
+      endTime = end.format('YYYY-MM-DD HH:mm:ss');
+      $('input[name="currentTimeStart"]').val(startTime);
+      $('input[name="currentTimeEnd"]').val(endTime);
+    });
+  });
 $(".searchinput").each(function(){
 	$(this).searchinput({});
 });
