--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyState/index_query.html
@@ -30,7 +30,7 @@
 </body>
 <script type="text/javascript">
   var startTimestamp = moment().hours(0).minutes(0).seconds(0);
-  var endTimestamp = moment(new Date());
+  var endTimestamp = moment().hours(23).minutes(59).seconds(59);
   var startTime = startTimestamp.format('YYYY-MM-DD HH:mm:ss');
   var endTime = endTimestamp.format('YYYY-MM-DD HH:mm:ss');
   $('input[name="currentTimeStart"]').val(startTime);
@@ -51,9 +51,9 @@
       },
       ranges: {
         // '今天': [moment(), moment()],
-        '昨天': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
-        '上周': [moment().subtract(6, 'days'), moment()],
-        '前30天': [moment().subtract(29, 'days'), moment()],
+        '昨天': [moment().subtract(1, 'days').hours(0).minutes(0).seconds(0), moment().subtract(1, 'days').hours(23).minutes(59).seconds(59)],
+        '过去7天': [moment().subtract(6, 'days'), moment()],
+        '过去30天': [moment().subtract(29, 'days'), moment()],
         '本月': [moment().startOf('month'), moment().endOf('month')],
         '上月': [moment().subtract(1, 'month').startOf('month'),
           moment().subtract(1, 'month').endOf('month')]
