--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <div class="row J_mainContent" id="content-main">
-            <iframe class="J_iframe" name="iframe1" width="100%" height="100%" src="" frameborder="0" seamless></iframe>
+            <iframe class="J_iframe" name="iframe1" width="100%" height="100%" src="indexContent.html" frameborder="0" seamless></iframe>
         </div>
 
         <!-- 退出登录弹框 -->
